--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     });
     </script>
     <meta charset="UTF-8">
-    <title>田某网址导航测试</title>
+    <title>知行合一</title>
     <script>
     if (navigator.appName == "Netscape") {
         var language = navigator.language;
