--- a/cn/index.html
+++ b/cn/index.html
@@ -14,9 +14,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="viggo" />
-    <title>互联网真的是太精彩了!!!</title>
+    <title>知行合一</title>
     <meta name="keywords" content="快乐上网">
-    <meta name="description" content="上网冲浪真的是太有意思了">
+    <meta name="description" content="互联网真的是太精彩了!!!">
     <link rel="shortcut icon" href="../assets/images/favicon.png">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Arimo:400,700,400italic">
     <link rel="stylesheet" href="../assets/css/fonts/linecons/css/linecons.css">
@@ -264,32 +264,18 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class ="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://blog.tianjiajie.com/wp-admin','_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://blog.tianjiajie.com">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://notion.so/','_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://notion.so/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
-                                <img src="../assets/images/logos/UICloud.png" width="50">
+                                <img src="../assets/images/logos/notion.png" width="50">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>【孤山行我路】</strong>
+                                    <strong>【Notion】</strong>
                                 </a>
-                                <p class="overflowClip_2">正经人谁写日记啊,写日记的能叫正经人？</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class ="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.freewhale.us/','_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.freewhale.us/">
-                        <div class="xe-comment-entry">
-                            <a class="xe-user-img">
-                                <img src="../assets/images/logos/trianglify.png" width="50">
-                            </a>
-                            <div class="xe-comment">
-                                <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>自由鲸</strong>
-                                </a>
-                                <p class="overflowClip_2">神奇世界的魔法大门</p>
+                                <p class="overflowClip_2">Notion我神奇的Notion</p>
                             </div>
                         </div>
                     </div>
