--- a/cn/index.html
+++ b/cn/index.html
@@ -14,9 +14,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="viggo" />
-    <title>知行合一</title>
+    <title>PC上网捷径</title>
     <meta name="keywords" content="快乐上网">
-    <meta name="description" content="互联网真的是太精彩了!!!">
+    <meta name="description" content="互联网真的是太有意思了!!!">
     <link rel="shortcut icon" href="../assets/images/favicon.png">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Arimo:400,700,400italic">
     <link rel="stylesheet" href="../assets/css/fonts/linecons/css/linecons.css">
